[FIX] Color contrast and wrong background image path (FiveAlive-lite/Grape, Plum, Watermelon).
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/14.x@55181 b456876b-0849-0410-b77d-98878d47e9d5

--- a/themes/fivealive-lite/less/tiki-selector-variables.less
+++ b/themes/fivealive-lite/less/tiki-selector-variables.less
@@ -20,6 +20,7 @@
 @footer-link-color: #a9a9a9;
 @navbar-default-navbar-nav-li-a-background: #28aae1;
 @postbody-title-background: @header_outer-background;
+@postbody-title-color: #000;
 // url('@{imagePath}siteheader.png') no-repeat -480px -200px;
 @brand-primary-of-option: @brand-primary;
 @navbar-default-link-background: @navbar-default-navbar-nav-li-a-background;
