--- a/themes/fivealive-lite/options/grape/less/tiki-selector-variables.less
+++ b/themes/fivealive-lite/options/grape/less/tiki-selector-variables.less
@@ -22,6 +22,7 @@
 // #a52873;
 @navbar-default-navbar-nav-li-a-background: #8e286a;
 @postbody-title-background: url('@{imagePath}siteheader.png') no-repeat -480px -200px;
+@postbody-title-color: #fff;
 @brand-primary-of-option: @brand-primary;
 
 // .secondary_site_menu .navbar-nav li.dropdown { border-bottom: none;}
