--- a/themes/fivealive-lite/options/watermelon/less/tiki-selector-variables.less
+++ b/themes/fivealive-lite/options/watermelon/less/tiki-selector-variables.less
@@ -23,6 +23,7 @@
 //#eb1e41;
 @navbar-default-navbar-nav-li-a-background: #e71e40;
 @postbody-title-background: url('@{imagePath}siteheader.png') no-repeat -480px -200px;
+@postbody-title-color: #fff;
 // @brand-primary-of-option:                   @brand-primary;
 
 // .secondary_site_menu .navbar-nav li.dropdown { border-bottom: none;}
